# musicdevicedescriptions

./: CMakeLists.txt
.devcontainer/: Dockerfile  common.sh  devcontainer.json  run_docker_image.sh
ConfigModifierScripts/: change.sh  eliminateSourceRangeFromLists.py  expandRange.py  fill_sysex_for_circuit.py  find-out-the-role.py  floatRangeToInt.py  modifyConfigs_1.py  modifyConfigs_2.py  modifyConfigs_3.py  openMidiRt_2_midiem.py  openMidiRt_2_midiem_caller.sh  update-role-db.py  usercamp_2_midiem.py  usercamp_2_midiem_caller.sh
ConfigModifierScripts/Deluge/: Init.xml  Valentin.xml  addMapping.py  midiKnobs.xml  mod_Init.xml
MidiConfigs/: roles_db.json  usbMidiName2device.json
MidiConfigs/Devices/Access/Virus-A/: Config.json
MidiConfigs/Devices/Akai/MPD218/: Config.json
MidiConfigs/Devices/Arturia/Keystep32/: Config.json
MidiConfigs/Devices/Arturia/MicroFreak/: Config.json
MidiConfigs/Devices/Arturia/Microbrute/: Config.json
MidiConfigs/Devices/Behringer/ModelD/: Config.json
MidiConfigs/Devices/Behringer/Neutron/: Config.json
MidiConfigs/Devices/Behringer/WaspDeluxe/: Config.json
MidiConfigs/Devices/DSI/OB-6/: Config.json
MidiConfigs/Devices/DSI/Tetra/: Config.json
MidiConfigs/Devices/DSI/pro-2/: Config.json
MidiConfigs/Devices/DSI/prophet-6/: Config.json
MidiConfigs/Devices/DSI/rev2/: Config.json
MidiConfigs/Devices/DSI/six-trak/: Config.json
MidiConfigs/Devices/Elektron/Analog4_MK2/: Config.json
MidiConfigs/Devices/Elektron/Analog4_Mk1/: Config_old.json
MidiConfigs/Devices/Elektron/AnalogRytm_MK2/: Config.json
MidiConfigs/Devices/Elektron/AnalogRytm_Mk1/: Config.json
MidiConfigs/Devices/Elektron/Digitakt/: Config.json
MidiConfigs/Devices/Elektron/Digitone/: Config.json
MidiConfigs/Devices/Elektron/Model_Samples/: Config.json
MidiConfigs/Devices/Elektron/Octatrack_MK2/: Config.json
MidiConfigs/Devices/Elektron/Octatrack_Mk1/: Config.json
MidiConfigs/Devices/Eventide/Space/: Config.json
MidiConfigs/Devices/ExpressiveE/ToucheSe/: Config.json
MidiConfigs/Devices/FredsLab/Buzzzy/: Config.json
MidiConfigs/Devices/GEM/rp-x/: Config.json
MidiConfigs/Devices/IKMultimedia/Uno-Drum/: Config.json
MidiConfigs/Devices/IKMultimedia/Uno-Synth/: Config.json
MidiConfigs/Devices/Korg/ElectribeER-1/: Config.json
MidiConfigs/Devices/Korg/MS2000/: Config.json
MidiConfigs/Devices/Korg/MicroKORG/: Config.json
MidiConfigs/Devices/Korg/Minilogue/: Config.json
MidiConfigs/Devices/Korg/Minilogue-xd/: Config.json
MidiConfigs/Devices/Korg/Monologue/: Config.json
MidiConfigs/Devices/Korg/NTS-1/: Config.json
MidiConfigs/Devices/Korg/Volca-Bass/: Config.json
MidiConfigs/Devices/Korg/Volca-Beats/: Config.json
MidiConfigs/Devices/Korg/Volca-Drum/: Config.json
MidiConfigs/Devices/Korg/Volca-Fm/: Config.json
MidiConfigs/Devices/Korg/Volca-Nubass/: Config.json
MidiConfigs/Devices/Korg/VolcaKeys/: Config.json
MidiConfigs/Devices/Korg/VolcaKick/: Config.json
MidiConfigs/Devices/Korg/VolcaSample/: Config.json
MidiConfigs/Devices/Korg/arp-odyssei/: Config.json
MidiConfigs/Devices/Korg/z1/: Config.json
MidiConfigs/Devices/MAM/MB33/: Config.json
MidiConfigs/Devices/MSSIAH/MSSIAH/: Config.json
MidiConfigs/Devices/MakeNoise/0-Coast/: Config.json
MidiConfigs/Devices/MattTytel/Helm/: Config.json  Helm.config
MidiConfigs/Devices/MeeBlip/geode/: Config.json
MidiConfigs/Devices/MeeBlip/triode/: Config.json
MidiConfigs/Devices/Mfb/Synth-II/: Config.json
MidiConfigs/Devices/Mfb/Tanzbaer/: Config.json  Config2.json
MidiConfigs/Devices/Mfb/Tanzbaer-Lite/: Config.json
MidiConfigs/Devices/Mitxela/Flash/: Config.json
MidiConfigs/Devices/Modal/Craft/: Config.json
MidiConfigs/Devices/Modal/Skulpt/: Config.json
MidiConfigs/Devices/Modal/argon-8/: Config.json
MidiConfigs/Devices/Modal/craftrhythm/: Config.json
MidiConfigs/Devices/Modal/craftsynth-2_0/: Config.json
MidiConfigs/Devices/Moog/Grandmother/: Config.json
MidiConfigs/Devices/Moog/Matriarch/: Config.json
MidiConfigs/Devices/Moog/Minitaur/: Config.json
MidiConfigs/Devices/Moog/Sirin/: Config.json
MidiConfigs/Devices/Moog/Slim-phatty/: Config.json
MidiConfigs/Devices/Moog/Sub-37/: Config.json
MidiConfigs/Devices/Moog/Sub-Phatty/: Config.json
MidiConfigs/Devices/Moog/Subsequent25/: Config.json
MidiConfigs/Devices/MutableInstruments/Shruthi/: Config.json
MidiConfigs/Devices/NativeInstruments/KompleteKontrolA61/: Config.json
MidiConfigs/Devices/Novation/Circuit/: Config.json
MidiConfigs/Devices/Novation/LaunchControlXL/: Config.json
MidiConfigs/Devices/Novation/bassstation-2/: Config.json
MidiConfigs/Devices/Roland/D-05/: Config.json
MidiConfigs/Devices/Roland/GAIA-SH-01/: Config.json
MidiConfigs/Devices/Roland/JD-XA/: Config.json
MidiConfigs/Devices/Roland/JD-Xi/: Config.json
MidiConfigs/Devices/Roland/JP-08/: Config.json
MidiConfigs/Devices/Roland/JU-06/: Config.json
MidiConfigs/Devices/Roland/JX-03/: Config.json
MidiConfigs/Devices/Roland/SE-02/: Config.json
MidiConfigs/Devices/Roland/SH-01A___TODO/: Config.json
MidiConfigs/Devices/Roland/System-1/: Config.json
MidiConfigs/Devices/Roland/System-8/: Config.json
MusicDeviceDescription/: CMakeLists.txt  ControllerSection.h  ControllerSection.inl  ControllerSectionMeta.h  ControllerSysExDescription.h  ControllerSysExDescriptionMeta.h  HubSection.h  HubSectionMeta.h  MidiMessageIdsMeta.h  MidiSysexDumpDescrHelper.h  MusicDeviceChains.h  MusicDeviceChainsMeta.h  MusicDeviceDescription.cpp  MusicDeviceDescription.h  MusicDeviceDescriptionMeta.h  SoundSection.h  SoundSection.inl  SoundSectionMeta.h  SoundSysExDescription.h  SoundSysExDescriptionMeta.h  SysExDescription.h  SysExDescriptionMeta.h
MusicDeviceDescription/UnitTest/: CMakeLists.txt  UT_musicDeviceDescription.cpp
Util/: CMakeLists.txt  EnumReflect.h  Overload.h  Parameter.h  StrongType.h  UtilOverload.h  UtilVectorIndexInRange.h  VectorIndexInRange.h
Util/Serialize/: CMakeLists.txt  JsonCast.h  JsonCast.inl
cmake/: MusicDeviceDescriptionsConfig.cmake  MusicDeviceDescriptionsConfig.cmake.in
(+135 files in other folders)
